bk_ida/gccida/g2/bitmap_clear_bit
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/bitmap_clear_bit/src/bitmap.c:838:17: error: expected expression
if ( *( _OWORD *)v6->bits != 0LL ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/bitmap_clear_bit/src/bitmap.c:838:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)v6->bits != 0LL ) 
        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/bitmap_clear_bit/src/obj/bitmap.o] Error 1
